test/spec_vectors/align64/ok/module_4.wat
(module (memory i64 0) (func (drop (i32.load align=4 (i64.const 0)))))