test/spec_vectors/align64/fail/module_87.wat
(module (memory i64 0) (func (drop (i32.load align=8 (i64.const 0)))))